[eo] - added disambiguator for Esperanto      - few updates to Esperanto grammar.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -11,6 +11,9 @@ LanguageTool Change Log
  -French: 
    -Updated dictionary to use Dicollecte lexique 4.2
    -Added and updated a few rules
+ -Esperanto:
+   -Added disambiguation for Esperanto
+   -Added and updated a few rules
 
  -Rule development:
   -Fixed testrules.sh to not throw an AssertionFailedError error if called 
