add new feature of fast rule evaluation in CHANGES.TXT

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -17,7 +17,8 @@ LanguageTool Change Log
 
  -Rule development:
   -Fixed testrules.sh to not throw an AssertionFailedError error if called 
-   with a language parameter 
+   with a language parameter
+  -Fast Rule Evaluation is supported in "dev.index" package. 
 
  -LanguageToolGUI and LanguageTool now have support for automatic language 
   detection (Michael Bryant)
