add Chinese Language Changes

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -14,6 +14,9 @@ LanguageTool Change Log
  -Esperanto:
    -Added disambiguation for Esperanto
    -Added and updated a few rules
+ -Chinese:
+   -Added ChineseSentenceTokenizer, ChineseWordTokenizer, ChineseTagger
+   -Added Chinese rules
 
  -Rule development:
   -Fixed testrules.sh to not throw an AssertionFailedError error if called 
