add missing key to the file

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle.properties
@@ -192,3 +192,5 @@ unpaired_brackets = Unpaired bracket or similar symbol
 whitespace_repetition = Possible typo: you repeated a whitespace
 
 ro = Romanian
+
+zh = Chinese
