--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_en.properties
@@ -144,6 +144,8 @@ lt = Lithuanian
 
 missing_space_after_comma = Put a space after the comma
 
+missing_space_before = Put a space before the opening parenthesis
+
 ml = Malayalam
 
 nl = Dutch
