New message should have been in MessagesBundle.properties rather than in MessagesBundle_en.properties.

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle.properties
@@ -147,7 +147,9 @@ lt = Lithuanian
 
 missing_space_after_comma = Put a space after the comma
 
-ml= Malayalam
+missing_space_before = Put a space before the opening parenthesis
+
+ml = Malayalam
 
 nl = Dutch
 
