allow three-character codes for languages

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -30,6 +30,10 @@ LanguageTool Change Log
    -The disambiguator has a new action "immunize" that protects
    token from being matched by error-detecting rules (especially
    in XML rules).
+  -Allowed three character codes for languages, e.g. 'ast' for Asturian. This
+   is the ISO 639-2 code, as Asturian doesn't seem to have an ISO 639-1
+   two-character code.
+
 
 1.4 (2011-06-26)
 
