[eo] added translation for message 'zh = Chinese'

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_eo.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_eo.properties
@@ -171,7 +171,7 @@ result1 = <br><b> {0}. Linio {1}, kolumno {2}</b><br>
 
 resultAreaText = Rezultoj aperos tie
 
-resultTime = <br>Tempo: {0}ms (inkluzive {1}ms por rekono de reguloj)<br>
+resultTime = <br>Daŭro: {0}ms (inkluzive {1}ms por rekono de reguloj)<br>
 
 ru = Rusa
 
@@ -198,3 +198,5 @@ unpaired_brackets = Nekongruaj krampoj a\u016d similaj simbolo
 whitespace_repetition = Ebla mistajpa\u0135o: vi ripetis spaceton
 
 ro = Rumana
+
+zh = \u0108ina
