adding support for Asturian by Xesús González Rato

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -14,9 +14,10 @@ LanguageTool Change Log
  -Esperanto:
    -Added disambiguation for Esperanto
    -Added and updated a few rules
- -Chinese:
+ -Added support for Chinese (Tao Lin):
    -Added ChineseSentenceTokenizer, ChineseWordTokenizer, ChineseTagger
    -Added Chinese rules
+ -Added support for Asturian (Xesús González Rato)
 
  -Rule development:
   -Fixed testrules.sh to not throw an AssertionFailedError error if called 
