add a link to German morphology data

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -6,7 +6,8 @@ LanguageTool Change Log
    -Extended the internal part-of-speech dictionary with
     about 2000 word forms. This should improve coverage of the
     agreement rule. It mostly affects words that have a new spelling
-    after the spelling reform.
+    after the spelling reform. See http://www.danielnaber.de/morphologie/
+    for the source of the new data.
    -Added one new rule.
  -French: 
    -Updated dictionary to use Dicollecte lexique 4.2
