--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle.properties
@@ -1,6 +1,8 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
+ast = Asturian
+
 be = Belarusian
 
 ca = Catalan
