[eo] Added Esperanto translation of "ast = Asturian".

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_eo.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_eo.properties
@@ -12,6 +12,8 @@
 # Send comments or corrections to: Dominique Pellé <dominique.pelle@gmail.com>
 #
 #
+ast = Asturia
+
 be = Belorusa
 
 ca = Kataluna
