Added support for Tagalog - thanks to Nathaniel Oco

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -19,6 +19,7 @@ LanguageTool Change Log
    -Added ChineseSentenceTokenizer, ChineseWordTokenizer, ChineseTagger
    -Added Chinese rules
  -Added support for Asturian (Xesús González Rato)
+ -Added support for Tagalog (Nathaniel Oco)
 
  -Rule development:
   -Fixed testrules.sh to not throw an AssertionFailedError error if called 
