--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle.properties
@@ -181,6 +181,8 @@ startChecking = Starting check in {0}
 
 sv = Swedish
 
+tl = Tagalog
+
 textLanguage = Text Language:
 
 two_commas = Two consecutive commas
