[eo] Added Esperanto translation for Tagalog  (tl = ...)

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_eo.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_eo.properties
@@ -187,6 +187,8 @@ startChecking = Ekkontroli en {0}
 
 sv = Sveda
 
+tl = Tagaloga
+
 textLanguage = Lingvo de teksto:
 
 two_commas = Du sinsekvaj komoj
