[eo] small improvements to Esperanto SRX tokenization rules.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -14,6 +14,7 @@ LanguageTool Change Log
    -Added and updated a few rules
  -Esperanto:
    -Added disambiguation for Esperanto
+   -Improved SRX sentence tokenization rules
    -Added and updated a few rules
  -Added support for Chinese (Tao Lin):
    -Added ChineseSentenceTokenizer, ChineseWordTokenizer, ChineseTagger
