[fr] added rules for dash in composed first names (idea found in Grammalecte-0.0.12)      (ex: "Jean Paul" -> "Jean-Paul")

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -11,7 +11,8 @@ LanguageTool Change Log
    -Added one new rule.
  -French: 
    -Updated dictionary to use Dicollecte lexique 4.2
-   -Added and updated a few rules
+   -Added and updated a few rules.  A few rules taken from
+     Grammalecte-0.0.12 written Olivier R.
  -Esperanto:
    -Added disambiguation for Esperanto
    -Improved SRX sentence tokenization rules
