--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -12,7 +12,7 @@ LanguageTool Change Log
  -French: 
    -Updated dictionary to use Dicollecte lexique 4.2
    -Added and updated a few rules.  A few rules taken from
-     Grammalecte-0.0.12 written Olivier R.
+     Grammalecte-0.0.12 written by Olivier R.
  -Esperanto:
    -Added disambiguation for Esperanto
    -Improved SRX sentence tokenization rules
