--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -22,6 +22,11 @@ LanguageTool Change Log
    -Added Chinese rules
  -Added support for Asturian (Xesús González Rato)
  -Added support for Tagalog (Nathaniel Oco)
+ -Ukrainian:
+   -Updated translation
+ -Russian:
+   -Fix SourceForge bug # 3334498 (False warning about unpaired bracket)
+   -Added a few rules
 
  -Rule development:
   -Fixed testrules.sh to not throw an AssertionFailedError error if called 
