--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -27,6 +27,8 @@ LanguageTool Change Log
  -Russian:
    -Fix SourceForge bug # 3334498 (False warning about unpaired bracket)
    -Added a few rules
+ -English:
+   -Fixed some of the problems in the Sourceforge bug #3396850. 
 
  -Rule development:
   -Fixed testrules.sh to not throw an AssertionFailedError error if called 
