fix the bug with UNKNOWN

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -47,6 +47,8 @@ LanguageTool Change Log
   -Allowed three character codes for languages, e.g. 'ast' for Asturian. This
    is the ISO 639-2 code, as Asturian doesn't seem to have an ISO 639-1
    two-character code.
+  -Fixed the bug with the special tag UNKNOWN: now it deals properly with 
+   the words at the end of sentence / paragraph.
 
  
 1.4 (2011-06-26)
