--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_nl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_nl.properties
@@ -1,94 +1,202 @@
 #X-Generator: crowdin.net
+# English translation of LanguageTool
+# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+
+ast=Asturiaans
+
 be=Witrussisch
+
 ca=Catalaans
+
 category_case=Hoofdlettergebruik
+
 category_false_friend=Begripsverwarring
+
 category_grammar=Grammatica
+
 category_misc=Diversen
+
 category_typo=Mogelijke typefouten
+
 checkDone=Klaar, {0} aandachtspunten
+
 checkText=Tekst controleren
+
 correctionMessage=Suggestie\:
+
 cs=Tsjechisch
+
 da=Deens
+
 de=Duits
+
 desc_comma_whitespace=Spatie voor of achter haakje
+
 desc_double_punct=Twee komma's of punten
+
 desc_repetition=Herhaling (bijv. 'de de')
+
 desc_repetition_short=Herhaling
+
 desc_unpaired_brackets=Onjuist gecombineerde leestekens
+
 desc_uppercase_sentence=Controleert of een zin begint met een hoofdletter
-desc_whitespacerepetition=Teveel witruimte tussen woorden
-double_dots_short=Teveel punten
-double_commas_short=Teveel komma's
+
+desc_whitespacerepetition=Te veel witruimte tussen woorden
+
+double_dots_short=Te veel punten
+
+double_commas_short=Te veel komma's
+
 en=Engels
+
 enterText=Voer in het bovenste vak de te controleren tekst in
+
 enterText2=Voer hier de te controleren tekst in
+
 eo=Esperanto
+
 errorContext=Context\:
+
 errorMessage=Melding\:
+
 es=Spaans
+
 false_friend=Betekenisverwarring
+
 false_friend_desc=Hint bij mogelijke verwisseling van begrippen\:
+
 false_friend_hint=Hint\: "{0}" ({1}) betekent {2} ({3}).
+
 false_friend_suggestion=Bedoelde u {0}?
+
 fr=Frans
+
 gl=Galicisch
+
+guiAddButton=Voeg toe...
 guiCancelButton=Annuleren
+
 guiCheckComplete=LanguageTool-controle gereed.
+guiCloseButton=Sluit
+
 guiConfigWindowTitle=LanguageTool-opties
+
 guiDemoText=Dit is een voorbeeld om te laten zien hoe Languagetool werkt. Besef wel dat het geen spellingcontrole bevat.
+guiLanguageManagerDialog=Taalmodulebeheer
+
 guiMatchCount=Aandachtspunten\:
+
 guiMenuAbout=Over...
+
 guiMenuAddRules=Inlezen regelbestand
+
 guiMenuCheckClipboard=Tekst van klembord controleren
+
 guiMenuFile=Bestand
+
 guiMenuHelp=Hulp
+
 guiMenuHide=Naar systeemvak
+
 guiMenuOpen=Openen...
+
 guiMenuOptions=Opties...
+
 guiMenuQuit=Afsluiten
-guiMenuShowMainWindow=Open het hoofdvenster
+
+guiMenuShowMainWindow=Open hoofdvenster
+
 guiMotherTongue=Moedertaal\:
+
 guiNoErrorsFound=Geen aandachtspunten gevonden (taal\: {0})
+
 guiNoErrorsFoundSelectedText=Geen aandachtspunten in de geselecteerde tekst(taal\: {0})
+
 guiOKButton=&Ok\u00e9
+
 guiOOoChangeButton=Wijzigen
+
 guiOOoCloseButton=Sluiten
+
 guiOOoIgnoreAllButton=Alles negeren
+
 guiOOoIgnoreButton=Negeer
+
 guiOOoOptionsButton=Opties...
+
 guiProgressWindowTitle=LanguageTool\: Tekst controleren...
+
+guiRemoveButton=Verwijder
 guiReplaceWindowTitle=Tekst vervangen
+
 guiReplaceWithOtherText=<nieuwe tekst>
+
 guiRunOnPort=Voer uit als server op poort
+
 guiSelectionCheckComplete=LanguageTool\: controle van geselecteerde tekst gereed.
+
+guiTagText=&Details
+
 incorrect_case=Deze zin begint niet met een hoofdletter
+
 is=IJslands
+
 it=Italiaans
+
 km=Khmer
+
 lt=Litouws
+
 missing_space_after_comma=Zet een spatie na de komma
+
 ml=Maleis
+
 nl=Nederlands
+
 no_space_after=Zet geen spatie na een haakje openen
+
 no_space_before=Zet geen spatie voor een haakje sluiten
+
 no_space_before_dot=Zet geen spatie voor een punt
+
 pl=Pools
+
 repetition=Mogelijke typefout\: herhaling van woord
-result1=<br><b> {0}. Regel {1}, positie {2}</b><br>
+
+result1=<br><b> {0}. Regel {1}, kolom {2}</b><br>
+
 resultAreaText=Resultaten verschijnen hier. Suggesties voor (verbeteringen van) Nederlandse regels kunt u inbrengen via\: www.opentaal.org en opentaal@lists.sf.own-it.nl.
-resultTime=<br>Duur\: {0}ms (inclusief {1}ms voor de regels)<br>
+
+resultTime=<br>Tijd\: {0} ms (inclusief {1} ms voor toepassen regels)<br>
+
 ru=Russisch
+
 sk=Slovaaks
+
 sl=Sloveens
+
 space_after_comma=Zet een spatie na een komma, maar niet ervoor
+
 startChecking=Start controle in {0}
+
 sv=Zweeds
+
+tl=Filipijns
+
 textLanguage=Teksttaal\:
+
 two_commas=Twee opeenvolgende komma's
+
 two_dots=Twee opeenvolgende punten
+
 uk=Oekra\u00efens
+
 unpaired_brackets=Oneven aantal teksthaken
+
 whitespace_repetition=Teveel witruimte
+
 ro=Roemeens
+
+zh=Chinees
+
