--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sk.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sk.properties
@@ -1,94 +1,202 @@
 #X-Generator: crowdin.net
+# English translation of LanguageTool
+# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+
+ast=Asturian
+
 be=Bielorusky
+
 ca=Katal\u00e1nsky
+
 category_case=Ve\u013ek\u00e9 a mal\u00e9 p\u00edsmen\u00e1
+
 category_false_friend=Falo\u0161n\u00fd priatelia
+
 category_grammar=Gramatika
+
 category_misc=R\u00f4zne
+
 category_typo=Mo\u017en\u00fd preklep
+
 checkDone=Kontrola je ukon\u010den\u00e1, {0} n\u00e1jden\u00fdch potenci\u00e1lnych ch\u00fdb.
+
 checkText=S&kontrolova\u0165
+
 correctionMessage=Oprava\:
+
 cs=\u010cesky
+
 da=D\u00e1nsky
+
 de=Nemecky
+
 desc_comma_whitespace=Pou\u017eitie medzery pred \u010diarkou a pred/za z\u00e1tvorkami
+
 desc_double_punct=Pou\u017eitie dvoch za sebou id\u00facich bodiek alebo \u010diarok
+
 desc_repetition=Opakovanie slov (napr. 'bude bude')
+
 desc_repetition_short=Opakovanie slov
+
 desc_unpaired_brackets=Nesp\u00e1rovan\u00e9 z\u00e1tvorky, \u00favodzovky alebo podobn\u00e9 symboly
+
 desc_uppercase_sentence=Skontrolujte, \u010di veta za\u010d\u00edna ve\u013ek\u00fdmi po\u010diato\u010dn\u00fdmi p\u00edsmenami
+
 desc_whitespacerepetition=Opakovanie "bielych znakov" napr. medzier (zl\u00e9 form\u00e1tovanie)
+
 double_dots_short=Dve za sebou id\u00face bodky
+
 double_commas_short=Dve za sebou id\u00face \u010diarky
+
 en=Anglicky
+
 enterText=Vlo\u017ete alebo nap\u00ed\u0161te text, ktor\u00fd chcete skontrolova\u0165 do hornej \u010dasti
+
 enterText2=Sem vlo\u017ete po\u017eadovan\u00fd text
+
 eo=Esperanto
+
 errorContext=Kontext\:
+
 errorMessage=Spr\u00e1va\:
+
 es=\u0160panielsky
+
 false_friend=Falo\u0161n\u00fd priate\u013e
+
 false_friend_desc=falo\u0161n\u00fd priate\u013e, tip\:\:
+
 false_friend_hint=Tip\: "{0}" ({1}) znamen\u00e1 {2} ({3}).
+
 false_friend_suggestion=M\u00e1te na mysli {0}?
+
 fr=Franc\u00fazsky
+
 gl=Gal\u00edcky
+
+guiAddButton=Add...
 guiCancelButton=Zru\u0161i\u0165
+
 guiCheckComplete=LanguageTool kontrola bola ukon\u010den\u00e1.
+guiCloseButton=Close
+
 guiConfigWindowTitle=LanguageTool Nastavenia
+
 guiDemoText=Toto je uk\u00e1\u017ekov\u00fd vstup, na predvedenie funk\u010dnosti LanguageTool. Pam\u00e4tajte si si, \u017ee neobsahuje "kontrolu" preklepo.
+guiLanguageManagerDialog=Language Module Manager
+
 guiMatchCount=Potenci\u00e1lne chyby\:
+
 guiMenuAbout=&O programe...
+
 guiMenuAddRules=Na\u010d\u00edta\u0165 s\u00fabor s p&ravidlami
+
 guiMenuCheckClipboard=S&kontrolova\u0165 text v schr\u00e1nke (clipboard)
+
 guiMenuFile=&S\u00fabor
+
 guiMenuHelp=&Pomocn\u00edk
+
 guiMenuHide=Sry\u0165 do syst\u00e9movej &li\u0161ty
+
 guiMenuOpen=&Otvori\u0165...
+
 guiMenuOptions=Nastaveni&a...
+
 guiMenuQuit=&Koniec
+
 guiMenuShowMainWindow=Otvori\u0165 hlavn\u00e9 okno
+
 guiMotherTongue=V\u00e1\u0161 rodn\u00fd jazyk\:
+
 guiNoErrorsFound=Bez ch\u00fdb alebo varovan\u00ed (jazyk\: {0})
+
 guiNoErrorsFoundSelectedText=Neboli n\u00e1jden\u00e9 chyby alebo varovania pre zvolen\u00fd text (jazyk\: {0})
+
 guiOKButton=&OK
+
 guiOOoChangeButton=&Zmeni\u0165
+
 guiOOoCloseButton=Zatvori\u0165
+
 guiOOoIgnoreAllButton=Ignorova\u0165 v\u0161etko
+
 guiOOoIgnoreButton=Ignorova\u0165
+
 guiOOoOptionsButton=Nastavenia...
+
 guiProgressWindowTitle=LanguageTool\: kontrolujem text...
+
+guiRemoveButton=Remove
 guiReplaceWindowTitle=Nahradi\u0165 text
+
 guiReplaceWithOtherText=<in\u00fd text>
+
 guiRunOnPort=Spusti\u0165 ako server na po&rte
+
 guiSelectionCheckComplete=LanguageTool kontrola ozna\u010den\u00e9ho textu je dokon\u010den\u00e1.
+
+guiTagText=&Tag Text
+
 incorrect_case=T\u00e1to veta neza\u010d\u00edna s ve\u013ek\u00fdm p\u00edsmenom
+
 is=Islandsky
+
 it=Taliansky
+
 km=Khmer
+
 lt=Litovsk\u00fd
+
 missing_space_after_comma=Vlo\u017ete medze za \u010diarku
+
 ml=Malajzijsk\u00fd
+
 nl=Holandsky
+
 no_space_after=Nevlo\u017ei\u0165 medzeru pred otv\u00e1raciu z\u00e1tvorku
+
 no_space_before=Nevlo\u017ei\u0165 medzeru za otv\u00e1raciu z\u00e1tvorku
+
 no_space_before_dot=Nevlo\u017ei\u0165 medzeru pred bodku
+
 pl=Po\u013esky
+
 repetition=Mo\u017en\u00fd preklep\: zopakovali ste slovo
-result1=<br><b> {0}. Riadok {1}, st\u013apec {2}</b><br>
+
+result1=<br><b> {0}. Line {1}, column {2}</b><br>
+
 resultAreaText=Tu sa zobraz\u00ed v\u00fdsledok
-resultTime=<br>\u010cas\: {0}ms (vr\u00e1tane {1}ms na pou\u017eitie pravidiel)<br>
+
+resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+
 ru=Rusky
+
 sk=Slovensky
+
 sl=Slovinsky
+
 space_after_comma=Vlo\u017ei\u0165 medzeru za \u010diarku, ale nie pred \u010diarku
+
 startChecking=Za\u010diatok kontroly po {0}
+
 sv=\u0160v\u00e9dsky
+
+tl=Tagalog
+
 textLanguage=Jazyk textu\:
+
 two_commas=Dve po sebe id\u00face \u010diarky
+
 two_dots=Dve po sebe id\u00face bodky
+
 uk=Ukrajinsky
+
 unpaired_brackets=Nevyp\u00e1rovan\u00e9 z\u00e1tvorky alebo podobn\u00fd symbol
+
 whitespace_repetition=Mo\u017en\u00fd preklep\: zopakovali ste "biely znak" (whitespace)
+
 ro=Rumunsky
+
+zh=Chinese
+
