--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sl.properties
@@ -1,94 +1,202 @@
 #X-Generator: crowdin.net
+# English translation of LanguageTool
+# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+
+ast=Asturian
+
 be=beloruski
+
 ca=katalonski
+
 category_case=Velike za\u010detnice
+
 category_false_friend=La\u017eni prijatelji
+
 category_grammar=Slovnica
+
 category_misc=Razno
+
 category_typo=Mo\u017ena tipkarska napaka
+
 checkDone=Preverjanje kon\u010dano, najdenih {0} potencialnih te\u017eav
+
 checkText=&Preveri besedilo
+
 correctionMessage=Popravek\:
+
 cs=\u010de\u0161ki
+
 da=danski
+
 de=nem\u0161ki
+
 desc_comma_whitespace=Uporaba presledka, tabulatorja ali preloma vrstice pred vejico in pred/po oklepaju
+
 desc_double_punct=Uporaba dveh zaporednih pik ali vejic
+
 desc_repetition=Podvojena beseda (npr. 'bo bo')
+
 desc_repetition_short=Podvojena beseda
+
 desc_unpaired_brackets=Neparni oklepaji, zaviti oklepaji, narekovaji in podobni znaki
+
 desc_uppercase_sentence=Preveri, da se poved za\u010dne z veliko za\u010detnico
+
 desc_whitespacerepetition=Ponovljen presledek (nepravilno oblikovanje)
+
 double_dots_short=Zaporedni piki
+
 double_commas_short=Zaporedni vejici
+
 en=angle\u0161ki
+
 enterText=Prosimo, vnesite ali prilepite besedilo za preverjanje v zgornje podro\u010dje
+
 enterText2=Prosimo, vnesite besedilo za preverjanje semkaj
+
 eo=esperanto
+
 errorContext=Kontekst\:
+
 errorMessage=Sporo\u010dilo\:
+
 es=\u0161panski
+
 false_friend=La\u017eni prijatelj
+
 false_friend_desc=namig o napa\u010dnem prijatelju za\:
+
 false_friend_hint=Namig\: "{0}" ({1}) pomeni {2} ({3}).
+
 false_friend_suggestion=Ste imeli v mislih {0}?
+
 fr=francoski
+
 gl=galicijski
+
+guiAddButton=Add...
 guiCancelButton=Prekli\u010di
+
 guiCheckComplete=Preverjanje z LanguageTool je dokon\u010dano.
+guiCloseButton=Close
+
 guiConfigWindowTitle=Mo\u017enosti LanguageTool
+
 guiDemoText=To je primer vnosa za potrebe prikaza delovanja orodja LanguageTool. Upo\u0161tevajte, da ne vklju\u010duje preverjanja \u010drkovanja.
+guiLanguageManagerDialog=Language Module Manager
+
 guiMatchCount=Mo\u017ene napake\:
+
 guiMenuAbout=&O raz\u0161iritvi ...
+
 guiMenuAddRules=Nalo\u017ei &datoteko s pravili
+
 guiMenuCheckClipboard=&Preveri besedilo na odlo\u017ei\u0161\u010du
+
 guiMenuFile=&Datoteka
+
 guiMenuHelp=Po&mo\u010d
+
 guiMenuHide=&Skrij v sistemski pladenj
+
 guiMenuOpen=&Odpri ...
+
 guiMenuOptions=&Mo\u017enosti ...
+
 guiMenuQuit=I&zhod
+
 guiMenuShowMainWindow=Odpri glavno okno
+
 guiMotherTongue=Va\u0161 materni jezik\:
+
 guiNoErrorsFound=Ni najdenih napak ali opozoril (jezik\: {0})
+
 guiNoErrorsFoundSelectedText=V izbranem besedilu ni najdenih napak ali opozoril (jezik\: {0})
+
 guiOKButton=V &redu
+
 guiOOoChangeButton=&Spremeni
+
 guiOOoCloseButton=Zapri
+
 guiOOoIgnoreAllButton=Prezri vse
+
 guiOOoIgnoreButton=Prezri
+
 guiOOoOptionsButton=Mo\u017enosti ...
+
 guiProgressWindowTitle=LanguageTool\: preverjanje besedila ...
+
+guiRemoveButton=Remove
 guiReplaceWindowTitle=Zamenjaj besedilo
+
 guiReplaceWithOtherText=<drugo besedilo>
+
 guiRunOnPort=Po\u017eeni kot stre\u017enik na v&ratih
+
 guiSelectionCheckComplete=Preverjanje izbranega besedila z LanguageTool je dokon\u010dano.
+
+guiTagText=&Tag Text
+
 incorrect_case=Ta poved se ne za\u010denja z veliko za\u010detnico
+
 is=islandski
+
 it=italijanski
+
 km=Khmer
+
 lt=litovski
+
 missing_space_after_comma=Po vejici vstavi presledek
+
 ml=malajalamski
+
 nl=nizozemski
+
 no_space_after=Ne postavljaj presledka za oklepaj
+
 no_space_before=Ne postavljaj presledka pred zaklepaj
+
 no_space_before_dot=Ne postavljaj presledka po piki
+
 pl=poljski
+
 repetition=Mo\u017ena tipkarska napaka\: ponovili ste besedo
-result1=<br><b> {0}. Vrstica {1}, stolpec {2}</b><br>
+
+result1=<br><b> {0}. Line {1}, column {2}</b><br>
+
 resultAreaText=Tukaj se bodo izpisali rezultati
-resultTime=<br>\u010cas\: {0}ms (vklju\u010dno z {1}ms za ujemanje pravil)<br>
+
+resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+
 ru=ruski
+
 sk=slova\u0161ki
+
 sl=slovenski
+
 space_after_comma=Presledek vstavi po vejici, ne pa pred vejico
+
 startChecking=Za\u010detek preverjanja v {0}
+
 sv=\u0161vedski
+
+tl=Tagalog
+
 textLanguage=Jezik besedila\:
+
 two_commas=Dve zaporedni vejici
+
 two_dots=Dve zaporedni piki
+
 uk=ukrajinski
+
 unpaired_brackets=Neparni oklepaji ali podobni znaki
+
 whitespace_repetition=Mo\u017ena tipkarska napaka\: ponovili ste presledek
+
 ro=romunski
+
+zh=Chinese
+
