--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_da.properties
@@ -1,94 +1,202 @@
 #X-Generator: crowdin.net
+# English translation of LanguageTool
+# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+
+ast=Asturian
+
 be=Hviderussisk
+
 ca=Catalansk
+
 category_case=STORE/sm\u00e5 bogstaver
+
 category_false_friend=Falske venner
+
 category_grammar=Grammatik
+
 category_misc=Diverse
+
 category_typo=Mulig sl\u00e5fejl
+
 checkDone=Kontrol gennemf\u00f8rt, {0} mulige problemer fundet
+
 checkText=&Kontrollere tekst
+
 correctionMessage=Korrektion\:
+
 cs=Tjekkisk
+
 da=Dansk
+
 de=Tysk
+
 desc_comma_whitespace=Mellemrum f\u00f8r komma og f\u00f8r/efter parenteser
+
 desc_double_punct=To p\u00e5 hinanden f\u00f8lgende punktummer eller kommaer
+
 desc_repetition=Ordgentagelse (f.eks. 'den den')
+
 desc_repetition_short=Ordgentagelse
+
 desc_unpaired_brackets=Ikke parret parenteser, tuborgklammer, citationstegn og lignende symboler
+
 desc_uppercase_sentence=Kontroller at s\u00e6tningen starter med et stort begyndelsesbogstav
+
 desc_whitespacerepetition=Gentagende mellemrum (d\u00e5rlig formatering)
+
 double_dots_short=To p\u00e5 hinanden f\u00f8lgende punktummer
+
 double_commas_short=To p\u00e5 hinanden f\u00f8lgende kommaer
+
 en=Engelsk
+
 enterText=Indtast eller inds\u00e6t teksten der skal kontrolleres i det \u00f8verste felt
+
 enterText2=Inds\u00e6t teksten der skal kontrollers her
+
 eo=Esperanto
+
 errorContext=Sammenh\u00e6ng\:
+
 errorMessage=Meddelelse\:
+
 es=Spansk
+
 false_friend=Falske venner
+
 false_friend_desc=Tip om falske venner\:
+
 false_friend_hint=Tip\: "{0}" ({1}) betyder {2} ({3}).
+
 false_friend_suggestion=Mente du {0}?
+
 fr=Fransk
+
 gl=Galicisk
+
+guiAddButton=Add...
 guiCancelButton=Annuller
+
 guiCheckComplete=LanguageTools kontrol er f\u00e6rdig.
+guiCloseButton=Close
+
 guiConfigWindowTitle=LanguageTool Indstillinger
+
 guiDemoText=Dette er et teksteksempel for at at vise hvordan LanguageTool virker. Bem\u00e6rk dog, at den ikke indeholder en stavekontrol.
+guiLanguageManagerDialog=Language Module Manager
+
 guiMatchCount=Mulig fejl\:
+
 guiMenuAbout=&Om LanguageTool
+
 guiMenuAddRules=Hent &regelfil
+
 guiMenuCheckClipboard=&Kontroller tekst i klipholderen
+
 guiMenuFile=&Filer
+
 guiMenuHelp=&Hj\u00e6lp
+
 guiMenuHide=&Skjul til systembakken
+
 guiMenuOpen=&\u00c5ben...
+
 guiMenuOptions=&Indstillinger...
+
 guiMenuQuit=&Afslut
+
 guiMenuShowMainWindow=\u00c5ben hovedvinduet
+
 guiMotherTongue=Dit modersm\u00e5l\:
+
 guiNoErrorsFound=Ingen fejl eller advarsler fundet (sprog\: {0})
+
 guiNoErrorsFoundSelectedText=Ingen fejl eller advarsler fundet i den markerede tekst (sprog\: {0})
+
 guiOKButton=&OK
+
 guiOOoChangeButton=&Change
+
 guiOOoCloseButton=&Luk
+
 guiOOoIgnoreAllButton=I&gnorer alle
+
 guiOOoIgnoreButton=&Ignorer her
+
 guiOOoOptionsButton=In&dstillinger...
+
 guiProgressWindowTitle=LanguageTool\: Kontrollere teks...
+
+guiRemoveButton=Remove
 guiReplaceWindowTitle=Erstat tekst
+
 guiReplaceWithOtherText=<anden tekst>
+
 guiRunOnPort=K\u00f8r som service p\u00e5 po&rt
+
 guiSelectionCheckComplete=LanguageTools kontrol af markerede tekst er f\u00e6rdig.
+
+guiTagText=&Tag Text
+
 incorrect_case=Denne s\u00e6tning starter ikke med et stort begyndelsesbogstav
+
 is=Islandsk
+
 it=Italiensk
+
 km=Khmer
+
 lt=Lettisk
+
 missing_space_after_comma=Inds\u00e6t et mellemrum efter kommaet
+
 ml=Malayalam
+
 nl=Hollandsk
+
 no_space_after=Inds\u00e6t ikke et mellemrum efter parentesbegynd
+
 no_space_before=Inds\u00e6t ikke et mellemrum f\u00f8r parentesslut
+
 no_space_before_dot=Inds\u00e6t ikke et mellemrum f\u00f8r punktum
+
 pl=Polsk
+
 repetition=Mulig sl\u00e5fejl\: du har gentaget et ord
+
 result1=<br><b> {0}. Linje {1}, kolonne {2}</b><br>
+
 resultAreaText=Resultater vil vise sig her
-resultTime=<br>Tid\: {0}ms (inklusiv {1}ms til regelafpr\u00f8vning)<br>
+
+resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+
 ru=Russisk
+
 sk=Slovakisk
+
 sl=Slovensk
+
 space_after_comma=Inds\u00e6t et mellemrum efter kommaet, ikke f\u00f8r det.
+
 startChecking=Starter kontrollen om {0}
+
 sv=Svensk
+
+tl=Tagalog
+
 textLanguage=Tekstens sprog\:
+
 two_commas=To p\u00e5 hinanden f\u00f8lgende kommaer
+
 two_dots=To p\u00e5 hinanden f\u00f8lgende punktummer
+
 uk=Ukrainsk
+
 unpaired_brackets=Ikke parret parenteser eller lignende symboler
+
 whitespace_repetition=Mulig sl\u00e5fejl\: du har gentaget et mellemrum
+
 ro=Rum\u00e6nsk
+
+zh=Chinese
+
