--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_de.properties
@@ -1,94 +1,202 @@
 #X-Generator: crowdin.net
+# English translation of LanguageTool
+# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+
+ast=Asturian
+
 be=Wei\u00dfrussisch
+
 ca=Katalanisch 
+
 category_case=Gro\u00df-/Kleinschreibung
+
 category_false_friend=Falsche Freunde
+
 category_grammar=Grammatik
+
 category_misc=Sonstiges
+
 category_typo=M\u00f6gliche Tippfehler
+
 checkDone=Pr\u00fcfung beendet, {0} m\u00f6gliche Probleme gefunden
+
 checkText=Text &pr\u00fcfen
+
 correctionMessage=Korrektur\:
+
 cs=Tschechisch
+
 da=D\u00e4nisch
+
 de=Deutsch
+
 desc_comma_whitespace=Leerzeichen vor/hinter Kommas und Klammern
+
 desc_double_punct=Zwei aufeinander folgende Kommas oder Punkte
+
 desc_repetition=Wortwiederholung (z.B. 'als als')
+
 desc_repetition_short=Wortwiederholung
+
 desc_unpaired_brackets=Unpaarige Anf\u00fchrungszeichen und Klammern
+
 desc_uppercase_sentence=Gro\u00dfschreibung am Satzanfang
+
 desc_whitespacerepetition=Wiederholung von Leerzeichen
+
 double_dots_short=Zwei aufeinander folgende Punkte
+
 double_commas_short=Zwei aufeinander folgende Kommas
+
 en=Englisch
+
 enterText=Bitte Text ins obere Feld eintippen oder hineinkopieren
+
 enterText2=Bitte Text hier eintippen oder hineinkopieren
+
 eo=Esperanto
+
 errorContext=Text\:
+
 errorMessage=Hinweis\:
+
 es=Spanisch
+
 false_friend=Falscher Freund
+
 false_friend_desc=Falscher-Freund-Hinweis f\u00fcr\:
+
 false_friend_hint=Hinweis\: "{0}" ({1}) bedeutet {2} ({3}).
+
 false_friend_suggestion=Meinten Sie vielleicht {0}?
+
 fr=Franz\u00f6sisch
+
 gl=Galicisch
+
+guiAddButton=Add...
 guiCancelButton=Abbrechen
+
 guiCheckComplete=LanguageTool-Pr\u00fcfung beendet.
+guiCloseButton=Close
+
 guiConfigWindowTitle=LanguageTool Optionen
+
 guiDemoText=Dies ist ein Beispiel-Text, um zu zu zeigen, wie LanguageTool funktioniert. Wie man sieht, ist keine R\u00e4chtshreibpr\u00fcfung enthalten.
+guiLanguageManagerDialog=Language Module Manager
+
 guiMatchCount=M\u00f6gliche Fehler\:
+
 guiMenuAbout=\u00dcber...
+
 guiMenuAddRules=Regeldatei laden...
+
 guiMenuCheckClipboard=Text in der Zwischenablage pr\u00fcfen
+
 guiMenuFile=Datei
+
 guiMenuHelp=Hilfe
+
 guiMenuHide=In den System Tray verkleinern
+
 guiMenuOpen=\u00d6ffnen...
+
 guiMenuOptions=Optionen...
+
 guiMenuQuit=Beenden
+
 guiMenuShowMainWindow=Hauptfenster \u00f6ffnen
+
 guiMotherTongue=Ihre Muttersprache\:
+
 guiNoErrorsFound=Keine Fehler und Warnungen gefunden (Textsprache\: {0})
+
 guiNoErrorsFoundSelectedText=Keine Fehler und Warnungen im selektierten Text gefunden (Textsprache\: {0})
+
 guiOKButton=&OK
+
 guiOOoChangeButton=\u00c4ndern
+
 guiOOoCloseButton=Schlie\u00dfen
+
 guiOOoIgnoreAllButton=Alle ignorieren
+
 guiOOoIgnoreButton=Ignorieren
+
 guiOOoOptionsButton=Optionen...
+
 guiProgressWindowTitle=LanguageTool\: Text pr\u00fcfen...
+
+guiRemoveButton=Remove
 guiReplaceWindowTitle=Text ersetzen
+
 guiReplaceWithOtherText=<anderer Text>
+
 guiRunOnPort=Als Server laufen auf Po&rt
+
 guiSelectionCheckComplete=LanguageTool-Pr\u00fcfung des selektierten Textes ist beendet.
+
+guiTagText=&Tag Text
+
 incorrect_case=Dieser Satz f\u00e4ngt nicht mit einem gro\u00df geschriebenen Wort an
+
 is=Isl\u00e4ndisch
+
 it=Italienisch
+
 km=Khmer
+
 lt=Litauisch
+
 missing_space_after_comma=Hinter einem Komma sollte ein Leerzeichen stehen.
+
 ml=Malayalam
+
 nl=Niederl\u00e4ndisch
+
 no_space_after=Hinter einer \u00f6ffnenden Klammer wird kein Leerzeichen eingef\u00fcgt.
+
 no_space_before=Vor einer schlie\u00dfeden Klammer wird kein Leerzeichen eingef\u00fcgt.
+
 no_space_before_dot=Vor dem Punkt sollte kein Leerzeichen stehen
+
 pl=Polnisch
+
 repetition=M\u00f6glicher Tippfehler\: ein Wort wird wiederholt
-result1=<br>\n<b> {0}. Zeile {1}, Spalte {2}</b><br>
+
+result1=<br><b> {0}. Zeile {1}, Spalte {2}</b><br>
+
 resultAreaText=Hier erscheint das Ergebnis der Textpr\u00fcfung
-resultTime=<br>\nZeit\: {0}ms (davon {1}ms f\u00fcr Regelpr\u00fcfungen)<br>
+
+resultTime=<br>Zeit\: {0}ms (inklusive {1}ms f\u00fcr Regelpr\u00fcfung)<br>
+
 ru=Russisch
+
 sk=Slowakisch
+
 sl=Slowenisch
+
 space_after_comma=Nur hinter einem Komma steht ein Leerzeichen, aber nicht davor.
+
 startChecking=Beginne Pr\u00fcfung in {0}
+
 sv=Schwedisch
+
+tl=Tagalog
+
 textLanguage=Textsprache\:
+
 two_commas=Zwei aufeinander folgende Kommas.
+
 two_dots=Zwei aufeinander folgende Punkte.
+
 uk=Ukrainisch
+
 unpaired_brackets=Es fehlt eine Klammer usw.
+
 whitespace_repetition=M\u00f6glicher Tippfehler\: mehr als ein Leerzeichen hintereinander
+
 ro=Rum\u00e4nisch
+
+zh=Chinese
+
