--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_gl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_gl.properties
@@ -1,94 +1,202 @@
 #X-Generator: crowdin.net
+# English translation of LanguageTool
+# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+
+ast=asturiano
+
 be=Bielorruso
+
 ca=catal\u00e1n
+
 category_case=Mai\u00fasculas e min\u00fasculas
+
 category_false_friend=Falsos amigos
+
 category_grammar=Gram\u00e1tica
+
 category_misc=Miscel\u00e1nea
+
 category_typo=Pos\u00edbeis erros tipogr\u00e1ficos
+
 checkDone=Comprobaci\u00f3n feita, atop\u00e1ronse {0} problemas potenciais
+
 checkText=&Comprobar o texto
+
 correctionMessage=Correcci\u00f3n\:
+
 cs=checo
+
 da=dan\u00e9s
+
 de=alem\u00e1n
+
 desc_comma_whitespace=Uso de espazos en branco diante dunha coma ou antes/despois de par\u00e9ntese
+
 desc_double_punct=Uso de dous puntos ou comas consecutivos
+
 desc_repetition=Repetici\u00f3n dunha palabra (por exemplo, 'vai vai')
+
 desc_repetition_short=Repetici\u00f3n dunha palabra
+
 desc_unpaired_brackets=Par\u00e9nteses, comi\u00f1as e s\u00edmbolos similares desemparellados
+
 desc_uppercase_sentence=Comproba que unha oraci\u00f3n comece con mai\u00fascula
+
 desc_whitespacerepetition=M\u00faltiples espazos en branco (erro de formato)
+
 double_dots_short=Dous puntos consecutivos
+
 double_commas_short=D\u00c3\u00baas comas consecutivas
+
 en=ingl\u00e9s
+
 enterText=Por favor, teclee ou pegue o texto a corrixir na \u00e1rea superior
+
 enterText2=Por favor, insira aqu\u00ed o texto a corrixir
-eo=Esperanto
+
+eo=esperanto
+
 errorContext=Contexto\:
+
 errorMessage=Mensaxe\:
+
 es=espa\u00f1ol
+
 false_friend=Falso amigo
+
 false_friend_desc=Nota referente aos falsos amigos\:
+
 false_friend_hint=Consello\: "{0}" ({1}) significa {2} ({3}).
+
 false_friend_suggestion=Quer\u00eda vostede dicir {0}?
-fr=Franc\u00e9s
-gl=Galego
+
+fr=franc\u00e9s
+
+gl=galego
+
+guiAddButton=Add...
 guiCancelButton=Cancelar
+
 guiCheckComplete=Completouse a correcci\u00f3n de LanguageTool.
+guiCloseButton=Close
+
 guiConfigWindowTitle=Opci\u00f3ns de LanguageTool
+
 guiDemoText=Esta vai a ser unha mostra de de exemplo para amosar  o funcionamento de LanguageTool. Por\u00e9n, te\u00f1a en conta que non incl\u00fae un corretor de ortografia.
+guiLanguageManagerDialog=Language Module Manager
+
 guiMatchCount=Erros potenciais\:
+
 guiMenuAbout=&Acerca de...
+
 guiMenuAddRules=Cargar ficheiro de &regras
+
 guiMenuCheckClipboard=&Corrixir texto do portaretallos
+
 guiMenuFile=&Ficheiro
+
 guiMenuHelp=A&xuda
+
 guiMenuHide=&Minimizar \u00e1 bandexa do sistema
+
 guiMenuOpen=A&brir...
+
 guiMenuOptions=Opci\u00f3n&s...
+
 guiMenuQuit=Sa\u00ed&r
+
 guiMenuShowMainWindow=Abrir fiestra principal
+
 guiMotherTongue=A s\u00faa lingua materna\:
+
 guiNoErrorsFound=Non se atoparon erros nin advertencias (lingua\: {0})
+
 guiNoErrorsFoundSelectedText=Non se atoparon erros ou advertencias no texto seleccionado (lingua\: {0})
+
 guiOKButton=&Aceptar
+
 guiOOoChangeButton=&Cambiar
+
 guiOOoCloseButton=Pechar
+
 guiOOoIgnoreAllButton=Ignorar todos
+
 guiOOoIgnoreButton=Ignorar
+
 guiOOoOptionsButton=Opci\u00f3ns...
+
 guiProgressWindowTitle=LanguageTool\: Comprobaci\u00f3n do texto...
+
+guiRemoveButton=Remove
 guiReplaceWindowTitle=Substitu\u00edr o texto
+
 guiReplaceWithOtherText=<outro texto>
+
 guiRunOnPort=Executar como servidor no por&to
+
 guiSelectionCheckComplete=LanguageTool completou a correcci\u00f3n do texto seleccionado.
+
+guiTagText=&Tag Text
+
 incorrect_case=Esta oraci\u00f3n non comeza cunha letra mai\u00fascula
+
 is=island\u00e9s
+
 it=italiano
-km=Khmer
+
+km=khmer
+
 lt=lituano
+
 missing_space_after_comma=Po\u00f1a un espazo detr\u00e1s da coma
+
 ml=malaiala
+
 nl=holand\u00e9s
+
 no_space_after=Non debe usar espazos detr\u00e1s dos par\u00e9nteses de apertura
+
 no_space_before=Non debe usar espazos antes dos par\u00e9nteses de peche
+
 no_space_before_dot=Non debe po\u00c3\u00b1er espazos antes dun punto.
+
 pl=polaco
+
 repetition=Pos\u00edbel erro tipogr\u00e1fico\: repet\u00edu unha palabra
+
 result1=<br><b> {0}. Li\u00f1a {1}, columna {2}</b><br>
+
 resultAreaText=Os resultados aparecer\u00e1n aqu\u00ed
-resultTime=<br>Tempo\: {0}ms (isto incl\u00fae {1}ms de coincidencia de regras)<br>
+
+resultTime=<br>Tempo\: {0}ms (inclu\u00edndo {1}ms na coincidencia de regras)<br>
+
 ru=ruso
+
 sk=eslovaco
+
 sl=esloveno
+
 space_after_comma=Po\u00f1a un espazo en branco despois da coma, pero nunca antes
+
 startChecking=Inicio da verificaci\u00f3n en {0}
+
 sv=sueco
+
+tl=Tagalog
+
 textLanguage=Lingua do texto\:
+
 two_commas=D\u00faas comas consecutivas
+
 two_dots=Dous puntos consecutivos
+
 uk=ucra\u00edno
+
 unpaired_brackets=Par\u00e9nteses ou s\u00edmbolos similares desemparellados
+
 whitespace_repetition=Pos\u00edbel erro tipogr\u00e1fico\: repet\u00edu un espazo en branco
+
 ro=roman\u00e9s
+
+zh=Chinese
+
