and update with a new key...

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_fr.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_fr.properties
@@ -2,6 +2,8 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
+atd=Automatically detect language
+
 ast=Asturien
 
 be=Bi\u00e9lorusse
