--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_km.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_km.properties
@@ -2,6 +2,8 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
+atd=Automatically detect language
+
 ast=Asturian
 
 be=\u1794\u17c1\u17a1\u17b6\u179a\u17bb\u179f\u17d2\u179f
