--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ru.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ru.properties
@@ -2,6 +2,8 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
+atd=Automatically detect language
+
 ast=\u0410\u0441\u0442\u0443\u0440\u0438\u0439\u0441\u043a\u0438\u0439
 
 be=\u0411\u0435\u043b\u043e\u0440\u0443\u0441\u0441\u043a\u0438\u0439
