--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_pl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_pl.properties
@@ -2,6 +2,8 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
+atd=Automatyczne wykrywanie j\u0119zyka
+
 ast=asturyjski
 
 be=bia\u0142oruski
