--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sk.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sk.properties
@@ -2,6 +2,8 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
+atd=Automatically detect language
+
 ast=Asturian
 
 be=Bielorusky
